lighthouse 100 achieved + fixed contact section padding on mobile

--- a/scss/fonts.scss
+++ b/scss/fonts.scss
@@ -1,4 +1,4 @@
-$font-prefix: '/assets/fonts';
+$font-prefix: '../assets/fonts';
 
 @font-face {
     font-family: 'Open Sans';
